# sertifGAN

./: .gitignore  .model_watcher.py.swp  dedup.py  model_uploader.py  model_watcher.py  pyproject.toml  readme.md  resizer.py  train.py
checker/: .gitignore  infer.py  lol.html  lol.ipynb  model.py  readme.md  train.py
test/: touche.py
