[tool.poetry]
name = "sertifgan"
version = "0.1.0"
description = ""
authors = ["svmihar <svmihar@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
imagehash = "^4.1.0"
bing---image-downloader = "^1.0.2"
bing-image-downloader = "^1.0.2"
tqdm = "^4.46.1"
torch = "^1.5.0"
torchvision = "^0.6.0"
fastai = "^1.0.61"
sklearn = "^0.0"
watchdog = "^0.10.2"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"
flake8 = "^3.8.3"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
